--- a/home1.html
+++ b/home1.html
@@ -4,15 +4,18 @@
     </head>
     <body>
             <header>
-                    <div class="hero">
-                            <h1>Welcome</h1>
+                        <div class="welcome">
+                            <h1>Welcome</h1><br><br>
+                
 
-</div>
-
-
-
-
-
-</header>
+                            <div class="parabox">
+                                        <img src="pic7.png"  class="avatar">
+                            <p>hjasjdb jbsd jabsdb shoa soh soas d o sdhofh a  osdhfo asdh  oahsdof oajsd  df askjdlfn
+                                    kjabsd fasdbf kasdbf llavh0psjqo wro   ausydvgbusbf ]hiabsdibsdibv haishfio hsufhasoidhf ajhsdh sdh sjdg sv
+                                    hgsdhgahsdgsad gdsb jhbsdhbd vjhsvbjh jhv vjcv sdhb  bcsdb vhb bhbs dbvb v
+                            </p>
+                            </div>
+                        </div>
+        
         </body>
         </html>
