--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     
 
 <ul class="main-nav">
-<li class="active"><a href="home1.html">Home</a></li>
+<li class="active"><a href="welcome.html">Home</a></li>
 <li><a href="">Services</a></li>
 <li><a href="">contact</a></li>
 <li><a href="">Activity</a></li>
